# auto-post

./: .env.example  .gitignore  CURRENT_SYSTEM.md  CURRENT_SYSTEM_v1.1.2.md  MONOREPO_INTEGRATION.md  Makefile  README.md  SETUP.md  TODO.md  instagram-auto-post-spec.md  pyproject.toml
.github/workflows/: catchup.yml  daily-post.yml  gallery-export.yml  monthly-schedule.yml  scan-folders.yml  schedule.yml
apps/admin-web/: admin-upload-ui-spec.md
apps/admin-web/admin/: admin.css  admin.js
apps/gallery/: ARCHITECTURE.md  README.md
apps/gallery/docs/: monorepo-migration-plan.md
apps/gallery/scripts/: check-monorepo-migration-readiness.sh
apps/worker-api/worker/src/: index.js
docs/: setup.md  system-spec.md
gas/src/: Config.gs  Grouping.gs  Instagram.gs  Main.gs  R2Storage.gs  Spreadsheet.gs  Twitter.gs  Utils.gs
scripts/: list-required-gh-secrets.sh  push-gh-secrets-from-env.sh
src/auto_post/: __init__.py  cli.py  config.py  gallery_exporter.py  google_api.py  gps_utils.py  grouping.py  importer.py  instagram.py  monthly_schedule.py  monthly_schedule_sources.py  notion_db.py  poster.py  r2_storage.py  threads.py  token_manager.py  x_twitter.py
tests/: __init__.py  test_gallery_exporter.py  test_grouping.py  test_monthly_schedule.py  test_poster.py  test_worker_notification_multi_author.mjs
